tests/syntax/bad/testfile-field-1.scala
class A { var a }
object Main { def main(args: Array[String]) { } }
